# test-framework-spec

./: README.markdown  test-framework-spec.cabal
example/: FancySpec.hs  Spec.hs
src/Test/: Spec.hs
src/Test/Spec/: HspecCompat.hs
