name:             test-framework-spec
version:          0.0.0
license:          MIT
license-file:     LICENSE
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.6

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base
    , transformers
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , HUnit
    , QuickCheck
  exposed-modules:
      Test.Spec
      Test.Spec.HspecCompat
